clusters/hive/apps/changedetection/k8s-manifests/browserless-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browserless
  labels:
    k8s-app: browserless
  namespace: changedetection
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: browserless
  template:
    metadata:
      labels:
        k8s-app: browserless
    spec:
      serviceAccountName: browserless
      containers:
        - name: browserless
          image: browserless/chrome:1.61.1-chrome-stable
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1
              memory: 1Gi
          ports:
            - containerPort: 3000
              name: tcp-3000
              protocol: TCP
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
