clusters/hive/apps/changedetection/k8s-manifests/browserless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: browserless
  name: playwright-chrome
  namespace: changedetection
spec:
  ports:
    - name: browserless-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    k8s-app: browserless
  sessionAffinity: None
  type: ClusterIP
