clusters/hive/apps/changedetection/k8s-manifests/changedetection-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: changedetection
  name: changedetection
  namespace: changedetection
spec:
  ports:
    - name: changedetection
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    k8s-app: changedetection
  sessionAffinity: None
  type: ClusterIP
