clusters/hive/apps/changedetection/k8s-manifests/changedetection-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection
  namespace: changedetection
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: changedetection.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: changedetection
                port:
                  number: 5000
            path: /
            pathType: Prefix
